--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,7 @@
 
 html {
     background-color: var(--background);
+    cursor: none;
 
 }
 
@@ -26,6 +27,16 @@ a {
 .main-link {
     font-size: 2.5rem;
     filter: none;
+    text-decoration-line: underline; 
+}
+
+img, #peacock{
+    position: absolute;
+    width: 30%;
+    top: 25%;
+    left: 35%;
+    z-index: -1;
+  
 }
 
 .top,
@@ -62,8 +73,8 @@ a {
 #mouse-div {
     position: absolute;
     z-index: -1;
-    width: 25vw;
-    height: 25vw;
+    width: 420px;
+    height: 420px;
     background-color: var(--background);
     opacity: 50%;
     filter: invert();
