--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
 :root {
     --background: white;
-    --text-color: white;
+    --text-color: black;
     --peacock-size: 420px;
 }
 
@@ -24,10 +24,9 @@ body {
 
 a {
     cursor: pointer;
-    color: var(--text-color);
+    color: var(--background);
     text-decoration: none;
     margin: 21px;
-
 }
 
 img,
@@ -71,7 +70,7 @@ img,
 .main-item {
     font-size: 2.5rem;
     text-decoration-line: underline;
-    filter: invert();
+    color: var(--text-color);
 }
 
 
