--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -22,12 +22,12 @@ a {
 
 img,
 #peacock {
-    position: absolute;
     width: var(--peacock-size);
     max-width: calc(90vh);
     top: 25%;
     left: 35%;
     z-index: 99;
+    position: absolute;
 }
 
 /* Menu */
@@ -41,23 +41,22 @@ img,
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.top {
+  .top {
     top: 0;
-}
-
-.right {
+  }
+  
+  .bottom {
+    bottom: 0;
+  }
+  
+  .left {
+    left: 0;
+  }
+  
+  .right {
     right: 0;
     text-align: right;
-}
-
-.left {
-    left: 0;
-}
-
-.bottom {
-    bottom: 0;
-}
-
+  }
 .main-item {
     font-size: 2.5rem;
     text-decoration-line: underline;
@@ -78,19 +77,35 @@ img,
 }
 
 @media screen and (max-width: 700px) {
-    
-        img #peacock {
-            position: none;
+        body {
+            overflow-y: scroll;
+        }
+        img, #peacock {
+            width: calc( var(--peacock-size) / 2);
+            position: relative;
+            display: flex;
             justify-content: center;
+            top: auto;
+            left: auto;
+            margin: auto;
+            padding: 21px;
+
         }
+        #mouse-div {
+            display: none;}
         a {
-            color: rgba(0, 0, 0, 0.6);
+            color: var(--text-color);
         }
+
     .menu-item {
         position: relative;
         text-align: center;
         margin: 4px;
         font-size: 1.4rem;
     }
+    /* .menu-item:last-of-type {
+        margin-top: 84px;
+    } */
+
 
 }
