--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -36,9 +36,9 @@ a.back-link {
 .project-card {
     background-color:antiquewhite;
     position: relative;
-    width: 333px;
+    width: 45%;
     height: 420px;
-    margin: 10px;
+    margin: 3%;
     border-radius: 12px;
 
 }
@@ -53,5 +53,17 @@ a.back-link {
 
 .card-description {
     font-size: 0.8rem;
+
+}
+
+
+@media screen and (max-width: 700px) {
+    
+.project-list {
+    position: relative;
+    text-align: center;
+    margin: 4px;
+    font-size: 1.4rem;
+}
 
 }
