--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -1,69 +1,60 @@
-
 .main-title {
-    font-size: 2.5rem;
-    text-decoration-line: underline;
-    color: var(--text-color);
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    margin: 42px;
-    font-size: 3rem;
-    font-weight: bold;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
+  font-size: 2.5rem;
+  text-decoration-line: underline;
+  color: var(--text-color);
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  margin: 42px;
+  font-size: 3rem;
+  font-weight: bold;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 a.back-link {
-    position: relative;
-    font-size: 0.8rem;
-    text-decoration: none;
-    text-decoration-line: none;
-    color: black;
+  position: relative;
+  font-size: 0.8rem;
+  text-decoration: none;
+  text-decoration-line: none;
+  color: black;
 }
 
-
 .project-list {
-    background-color: aquamarine;
-    overflow: hidden;
-    display: flex;
-    position: relative;
-    justify-content: center;
-    top:120px;
-    width: 100%;
-    
+  background-color: aquamarine;
+  overflow: hidden;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  top: 120px;
+  width: 100%;
 }
 
 .project-card {
-    background-color:antiquewhite;
-    position: relative;
-    width: 45%;
-    height: 420px;
-    margin: 3%;
-    border-radius: 12px;
-
+  background-color: antiquewhite;
+  position: relative;
+  width: 45%;
+  height: 420px;
+  margin: 3%;
+  border-radius: 12px;
 }
 
 .card-title {
-    font-size: 1.5rem;
-    top: 333px;
-    position: relative;
-    text-align: center;
-
+  font-size: 1.5rem;
+  top: 333px;
+  position: relative;
+  text-align: center;
 }
 
 .card-description {
-    font-size: 0.8rem;
-
+  font-size: 0.8rem;
 }
 
-
 @media screen and (max-width: 700px) {
-    
-.project-list {
+  .project-list {
     position: relative;
     text-align: center;
     margin: 4px;
     font-size: 1.4rem;
-}
-
+  }
 }
