--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,15 +1,20 @@
 :root {
-    --background: white;
-    --text-color: black;
-    --peacock-size: 420px;
+  --background: white;
+  --text-color: black;
+  --peacock-size: 420px;
 }
 
 html {
-    background-color: var(--background);
+  background-color: var(--background);
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: var(--text-color);
 }
