--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,7 +40,7 @@ a {
   color: var(--text-color);
   display: flex;
   flex-direction: column;
-  margin: 42px 0 42px 42px;
+  margin: 42px auto 42px 42px;
   font-size: 3rem;
   font-weight: bold;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
